[package]
name = "suitcase"
description = "A set of personal CLI tools to automate common tasks in software development (including Rust, Dart, and Flutter), written in Rust."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jeroen-meijer/suitcase-rs"
license = "MIT"
license-file = "LICENSE"
default-run = "suitcase"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
spinners = "4.1.0"
thiserror = "1.0.39"
